frontend/src/app/componenti/generazione-automatica/generazione-automatica.component.css
.container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;
    justify-content: center;
  }


  .mat-card-title{
    font-size: medium;
  }

  .stepper-container {
    margin-right: 20px;
    width: 80%;
  }
  .pic img {
    max-width: 50%;
    max-height: 50%;
  }
  .pic{
    width:fit-content;
  }

  .mat-card {
    width: 100%;
    margin: auto;
    margin-bottom: 20px;
    height: auto;
  }

  .button-container{
    margin: 10px;
    position: relative;
    margin-top: 20px;
  }

